--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>BouncingBall</title>
-        <script src="../p5.js"></script>
-        <script src="sketch.js"></script>
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <title>BouncingBall</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="../p5.js"></script>
+    <script src="sketch.js"></script>
+  </head>
+  <body>
+    <button onclick="changeDirection()">Bored yet?</button>
+  </body>
 </html>
